# recommendationSystemMPI_CPAP

./: CMakeLists.txt  README.md  performance.xlsx
MPI Recommendation System/: genRandomMatUI.cpp  matrixRecMovs.txt  matrixSR.txt  matrixUI.txt  recommendationSystem.cpp  recommendationSystem_serial.cpp
